test/tests/errors/error-ref-no-proc.sm
// true
// false
// false
/**/
/**/

program {
    proc x(y: int) {
        output y;
    }

    var z: proc(int) = ref x;
}